fixed small gap between navbar and section

--- a/app/assets/stylesheets/drill-hole.css
+++ b/app/assets/stylesheets/drill-hole.css
@@ -153,3 +153,7 @@
   margin-bottom: 3px;
   padding: 3px;
 }
+
+.heading#drill-hole{
+  margin-bottom:0px;
+}
